<resources>
    <string name="app_name">InterfazYEP</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign">SIGNUP</string>
    <string name="pass">PASSWORD</string>
    <string name="user">USERNAME</string>
    <string name="textoAccount">Don\'t have an account? Sign up</string>
    <string name="titulo">YEP</string>
    <string name="subtitle">Living la vida Loka</string>
</resources>
